    - Disallow server-side users to override X2Go Server commands via
      ~/bin (or similar). (Fixes: #336).
    - Avoid unitialised variables on early calls of ONMainWindow::closeEvent()
      or ONMainWindow::closeClient(). (Fixes: #253).
    - Update translation files. Add empty Portuguese translation. Update
      qt_<lang>.qm files from Debian unstable as of today.

  [ Oleksandr Shneyder ]
  * New upstream release (4.0.3.0):
    - Fix running x2goclient without arguments on Windows. (Fixes: #522).
    - Save proxy output in $HOME/S-$SESSION-ID/session.log if debugging is
      enabled.
    - Fork x2goclient on windows and terminate child processes if x2go client
      crashed. (Fixes: #159).
    - Add "clipboard" parameter to session profile and to command line options.
      (Fixes: #258).
    - Replace qCritical() with printError() by argument parsing.
    - Update translation files.
    - Update russian translation.
    - Update string "&Clipboard Mode" and translate in russian translation file.
    - Grammar fix in russian translation.
    - Add x2gohelper to start X2Go Client on Windows and clean child processes if
      X2Go Client crashes. (Fixes: #525).
    - On Windows rename x2goclient.exe to x2goclient-mainprocess.exe and
      x2gohelper.exe to x2goclient.exe.
    - Start x2gohelper from X2Go Client. Revert name changing of X2Go Client and
      x2gohelper.
    - Add Makefile for x2gohelper.
    - Add support for sessions folders.
    - Add folder explorer - GUI to management of sessions folders.
    - Support for sessions folders in sessionmanagedialog.
    - Session name autocomplition only for sessions in current folder.
    - Support for sessions folders and commandline options "--session"
      and "--sessionid".
    - Disable sessions explorer "back" button if user sessions disabled.
    - Include <QDir> in sessionexplorer.cpp.

  [ Mike DePaulo ]
  * New upstream release (4.0.3.0):