@@ -8,6 +8,7 @@ x2goclient (4.0.3.0-0x2go1) UNRELEASED; urgency=low
       or ONMainWindow::closeClient(). (Fixes: #253).
     - Update translation files. Add empty Portuguese translation. Update
       qt_<lang>.qm files from Debian unstable as of today.
+    - Update German translation file (after session folder feature got added).
 
   [ Oleksandr Shneyder ]
   * New upstream release (4.0.3.0):
@@ -54,7 +55,7 @@ x2goclient (4.0.3.0-0x2go1) UNRELEASED; urgency=low
 
   [ Stefan Baur ]
   * New upstream version (4.0.3.0):
-    - Update German translation file (INCOMPLETE).
+    - Update German translation file.
 
   [ Ricardo Díaz Martín ]
   * New upstream version (4.0.3.0):
